launchpad-buildd (224) UNRELEASED; urgency=medium

  [ Colin Watson ]
  * Allow configuring builders to use a different ClamAV database URL.
  * Require the LXD snap to be installed, rather than depending on the lxd
    package (which no longer exists in jammy).

  [ Andrey Fedoseev ]
  * `open` method is added to the backends providing access to the files
    in target environments via a file-like object.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 26 Oct 2022 08:55:39 +0200

launchpad-buildd (223) focal; urgency=medium

  * Add optional malware scanning at the end of CI build jobs, currently
    implemented using clamav.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 07 Oct 2022 17:31:08 +0100

launchpad-buildd (222) focal; urgency=medium

  * Remove use of six.
  * Fix handling of librarian macaroons, where the username is empty and we
    must use prior authentication.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 20 Sep 2022 14:39:14 +0100

launchpad-buildd (221) focal; urgency=medium

  [ Andy Whitcroft ]
  * Include Build-Depends-Arch when considering direct dependancies
    (LP: #1988999)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Sep 2022 12:19:18 +0100

launchpad-buildd (220) focal; urgency=medium

  * Work around https://github.com/lxc/lxcfs/issues/553 by unmounting
    /proc/cpuinfo in LXD-based armhf builds.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 26 Aug 2022 11:50:02 +0100

launchpad-buildd (219) focal; urgency=medium

  * Provide additional package repositories for CI builds rather than replacing
    the base repositories.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Fri, 19 Aug 2022 17:22:00 +0200

launchpad-buildd (218) focal; urgency=medium

  * Use a common output directory for all lpcraft jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 04 Aug 2022 10:31:56 +0100

launchpad-buildd (217) focal; urgency=medium

  [ Colin Watson ]
  * Improve deployment documentation.
  * Make URL sanitization a little less greedy.
